developer/src/kmc-package/test/fixtures/invalid/error_package_must_not_contain_itself.kmp
NOTE: not a .kmp file. This file must exist in order for the test to pass, as
the package compiler retrieves content files before doing validation tests.